# DRUniversumLib

./: .gitmodules  CMakeLists.txt  README.md
dependencies/Core2/: CMakeLists.txt
dependencies/Core2/include/: Core2Main.h  DRCubicSpline.h  DRFile.h  DRGameStateManager.h  DRUtils.h
dependencies/Core2/src/: CMakeLists.txt  DRCubicSpline.cpp  DRFile.cpp  DRFileManager.cpp  DRFrustumCulling.cpp  DRIni.cpp  DRLogger.cpp  DRUtils.cpp
dependencies/Image/: CMakeLists.txt
dependencies/Image/src/: CMakeLists.txt
dependencies/Network/: CMakeLists.txt
dependencies/UniNetwork/: CMakeLists.txt
include/: UniversumLib.h
include/UniversumLib/: UniversumLib.h  model.h
include/UniversumLib/controller/: BindToRenderer.h  BlockSectorTree.h  InputCamera.h  InputCommand.h  InputControls.h  OctreeNode.h  Sector.h
include/UniversumLib/exception/: Hash.h  Loadable.h  RapidJson.h  Task.h  Texture.h  UniversumLib.h
include/UniversumLib/generator/: RenderToTexture.h  Sector.h
include/UniversumLib/lib/: Crypto.h  DRINetwork.h  DRInterface.h  Loadable.h  MultithreadResource.h  Saveable.h  Thread.h  TimeCounter.h  rapidJson.h
include/UniversumLib/manager/: BaseGeometries.h  BlockTypes.h  CommandEvents.h  InstancingBlocks.h  Shaders.h  Textures.h
include/UniversumLib/model/: BlockSector.h  MoveableNode.h  MovingNode.h  Node.h  Position.h  Rotation.h  SaveTexture.h  Sector.h  SectorID.h  Shader.h  ShaderProgram.h  ShaderProgramBinary.h  SmallBlockSector.h  Texture.h  UniformSet.h  Unit.h
include/UniversumLib/model/block/: Block.h  BlockType.h  GeometrieBlock.h  MaterialBlock.h
include/UniversumLib/model/geometrie/: BaseGeometrie.h  Plane.h  Rect2DCollection.h
include/UniversumLib/server/: ConnectionToAccountServer.h  ConnectionToLiveServer.h  ConnectionToServer.h  SectorConnectionManager.h
include/UniversumLib/task/: BaseGeometrieLoading.h  FileLoading.h  FileSaving.h  Loadable.h  Saveable.h  Texture.h  TextureGetPixel.h  TextureSetPixel.h
include/UniversumLib/task/gpu/: Loadable.h  Saveable.h  Scheduler.h  Task.h  TextureUpload.h
include/UniversumLib/task/network/: NetworkTask.h
include/UniversumLib/type/: BaseGeometrieType.h  BlockAggregateType.h  GPUSchedulerCommandType.h  GPUTaskSpeedType.h  GeometrieDataType.h  GeometrieRenderMode.h  ImageFileType.h  InputCommandType.h  JsonMemberType.h  LoadingStateType.h  NodeType.h  SectorIdType.h  ShaderType.h  UnitType.h
include/UniversumLib/view/: BlockSector.h  Camera.h  FrameBuffer.h  Geometrie.h  Material.h  MultiTextureMaterial.h  Sector.h  Texture.h  TextureMaterial.h  VisibleNode.h
include/UniversumLib/view/block/: GeometrieBlock.h
include/controller/: BindToRenderer.h  GPUTask.h  OctreeNode.h
include/debug/: CPUSchedulerTasksLog.h
include/lib/: MultithreadResource.h
include/model/: BlockSektor.h
include/model/block/: MaterialBlock.h
include/model/geometrie/: BaseGeometrie.h  Plane.h  Rect2DCollection.h
packaging/: CMakeLists.txt  DRUniversumLibConfig.cmake
src/: CMakeLists.txt  main.cpp
src/controller/: BlockSectorTree.cpp  CPUShedulerThread.cpp  GPUScheduler.cpp  InputCamera.cpp  InputControls.cpp  OctreeNode.cpp  Sector.cpp
src/debug/: CPUSchedulerTasksLog.cpp
src/exception/: Hash.cpp  Loadable.cpp  RapidJson.cpp  Texture.cpp  UniversumLib.cpp
src/generator/: RenderToTexture.cpp  Sector.cpp
src/lib/: Loadable.cpp  Saveable.cpp  rapidJson.cpp
src/manager/: BaseGeometries.cpp  BlockTypes.cpp  CommandEvents.cpp  InstancingBlocks.cpp  Shaders.cpp  Textures.cpp
src/model/: BlockSector.cpp  MoveableNode.cpp  MovingNode.cpp  Node.cpp  Position.cpp  Rotation.cpp  Sector.cpp  SectorID.cpp  Shader.cpp  ShaderProgram.cpp  ShaderProgramBinary.cpp  Texture.cpp  UniformSet.cpp  Unit.cpp
src/model/block/: Block.cpp  BlockType.cpp  GeometrieBlock.cpp  MaterialBlock.cpp
src/model/geometrie/: BaseGeometrie.cpp  Plane.cpp  Rect2DCollection.cpp
src/server/: ConnectionToAccountServer.cpp  ConnectionToServer.cpp  SectorConnectionManager.cpp
src/task/: BaseGeometrieLoading.cpp  FileLoading.cpp  FileSaving.cpp  Loadable.cpp  Saveable.cpp  TextureGetPixel.cpp  TextureSetPixel.cpp
src/task/gpu/: Loadable.cpp  Saveable.cpp  Scheduler.cpp  Task.cpp
src/task/network/: NetworkTask.cpp
src/view/: BlockSector.cpp  Camera.cpp  FrameBuffer.cpp  Material.cpp  MultiTextureMaterial.cpp  Sector.cpp  Texture.cpp  TextureMaterial.cpp  VisibleNode.cpp  geometrie.cpp
src/view/block/: GeometrieBlock.cpp
test/: CMakeLists.txt
